# genesis-gappa-paper

./: .gitmodules  README.md  measure.sh  measure_memory.csv  measure_time.csv  plot.py
ape/: list_taxa_preorder.R  newick_reading.R  pairwise_patristic.R  read_newick.R
biopy/: base_frequencies.py  gc_content.py  iter_gc.py  iter_seqs.py  read_fasta.py  read_seqs.py  test.py
biopython/: base_frequencies.py  read_fasta.py  read_newick.py  read_phylip.py
data/: README.md  ben_random_tree_100k.nw  generate_alignments.sh  generate_data.sh  generate_placements.sh  generate_trees.sh
dendropy/: list_taxa.py  list_taxa_preorder.py  pairwise_patristic.py  read_fasta.py  read_newick.py  read_phylip.py
ete3/: list_taxa.py  list_taxa_preorder.py  pairwise_patristic.py  read_newick.py
gappa/: measure.sh  measure_memory.csv  measure_time.csv  plot.py
gappa/data/: generate_placements.sh
gappa/gappa/: edgepca.sh  edpl.sh  kr.sh  squash.sh
gappa/guppy/: README.md  edgepca.sh  edpl.sh  kr.sh  squash.sh
genesis/: base_frequencies  base_frequencies.cpp  base_frequencies.sh  build.sh  clean.sh  gc_content.cpp  gc_content.sh  list_taxa_preorder.cpp  list_taxa_preorder.sh  make_dummy_alignment.cpp  pairwise_patristic  pairwise_patristic.cpp  pairwise_patristic.sh  read_fasta  read_fasta.cpp  read_fasta.sh  read_jplace  read_jplace.cpp  read_jplace.sh  read_newick  read_newick.cpp  read_newick.sh  read_phylip
genesis/src/: base_frequencies.cpp  pairwise_patristic.cpp  read_fasta.cpp  read_jplace.cpp  read_newick.cpp  read_phylip.cpp
ggtree/: read_jplace.R  read_newick.R
guppy/: read_jplace.sh
libpll/: CMakeLists.txt  Makefile  base_frequencies  read_fasta  read_newick  read_newick.sh  read_phylip  read_tree.sh
libpll/src/: CMakeLists.txt  base_frequencies.cpp  read_fasta.cpp  read_newick.cpp  read_phylip.cpp  rf-distance.cpp
scikit-bio/: base_frequencies.py  pairwise_patristic.py  read_fasta.py  read_newick.py  read_phylip.py
